// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> should match snapshot when toggled 1`] = `
<div
  aria-disabled="false"
  aria-label="toggle on"
  class="base root_base toggled_base"
>
  <span
    class="handle_default_base handle_transition_base"
  />
</div>
`;

exports[`<Switch /> should match snapshot when toggled and disabled 1`] = `
<div
  aria-disabled="true"
  aria-label="toggle on"
  class="base root_base toggled_base disabled_default_base disabled_toggled_base"
>
  <span
    class="handle_default_base handle_transition_base"
  />
</div>
`;

exports[`<Switch /> should match snapshot when un-toggled 1`] = `
<div
  aria-disabled="false"
  aria-label="toggle off"
  class="base root_base"
>
  <span
    class="handle_default_base"
  />
</div>
`;

exports[`<Switch /> should match snapshot when un-toggled and disabled 1`] = `
<div
  aria-disabled="true"
  aria-label="toggle off"
  class="base root_base disabled_default_base"
>
  <span
    class="handle_default_base"
  />
</div>
`;

exports[`<Switch /> should match snapshot without props 1`] = `
<div
  aria-disabled="false"
  aria-label="toggle off"
  class="base root_base"
>
  <span
    class="handle_default_base"
  />
</div>
`;
